ChangeLog for 2.53.1

//Beta 19
Added an emulation flag for buggy ->Next combo behaviour.
Fixed the issue reported by Matthew, where a Slash->Next combo
	that transformed into a Step->Secrets combo would immediately transform
	into the secret combo of the step combo, without being stepped upon,
	immediately after being slashed.
	( ZoriaRPG, 17th December, 2019 )

//Beta 18
Fix and clean up Compiler dialoge. 
Added Menu: Tools->ZQuest Settings->Compiler, with option to set
	header guard value.
Note how to cause header guards to match the filename instead of quotedstrings.	
Make header guard tokens case-insensitive.
Added zquest.cfg option HEADER_GUARD. At present, this matches
	the full quoted string, but should we ever want to match the
	filename only, I added a note in ffscript.ypp, line 680
	on how to revert to doing that.
	( ZoriaRPG, 10th December, 2019 )
	
Fixed illegal ternary token error on ':'
	( ZoriaRPG, 8th December, 2019 )

//Beta 17
Fixed a possible crash when saving MIDI files from ZC Player.
	( ZoriaRPG, 8th December, 2019 )

//Beta 16
Clear the panel recent screen buttons when creating a new quest.
Clear the panel recent screen buttons to prevent crashes from invalid maps.
	( ZoriaRPG, 26th November, 2019 )
	
ZQ now displays the decimal value of a screen number in parentheses
	next to the hex value in ZQ.
	( Venrob, 26th November, 2019 )
	
ZScript Dialogue: Import is now Load (hotkey 'L'), to match 2.55. 
	( ZoriaRPG, 25th November, 2019 )

//Beta 15
Display colour in tile editor as hex.
	( Venrob, 24th November, 2019 )

//Beta 14
Changed menu entry 'The Travels of Link' to 'Ambient Music'.
Fixed ambient and boss sounds being killed when using potions.
	The prior fix did not work. 
Fix Memory Leak from Mirrors: This commit should remove a memory leak when 
	reflecting weapons off of mirrors caused by creating a new weapon, 
	then not using it. 
	Notably: 
		weapon *w = new weapon(*this);