@@ -1159,6 +1159,19 @@ string OPushRegister::toString()
     return "PUSHR " + getArgument()->toString();
 }
 
+string OPushImmediate::toString()
+{
+	ostringstream oss;
+	oss << "PUSHV ";
+	Argument* arg = getArgument();
+	if (LabelArgument* label = dynamic_cast<LabelArgument*>(arg))
+		oss << label->toStringSetV();
+	else
+		oss << arg->toString();
+	return oss.str();
+    return "PUSHV " + getArgument()->toString();
+}
+
 string OPopRegister::toString()
 {
     return "POP " + getArgument()->toString();
